Add latest changes with logfiles system property