@@ -192,9 +192,9 @@ fi
 # ---------- Handle the SSL Issue with proper JDK version --------------------
 java_version=$("$JAVACMD" -version 2>&1 | awk -F '"' '/version/ {print $2}')
 java_version_formatted=$(echo "$java_version" | awk -F. '{printf("%02d%02d",$1,$2);}')
-if [ $java_version_formatted -lt 0107 ] || [ $java_version_formatted -gt 1100 ]; then
+if [ $java_version_formatted -lt 1100 ] || [ $java_version_formatted -gt 1700 ]; then
    echo " Starting WSO2 MI (in unsupported JDK)"
-   echo " [ERROR] MI is supported only on JDK 1.8, 9, 10 and 11"
+   echo " [ERROR] WSO2 MI is supported only between JDK 11 and JDK 17"
 fi
 
 CARBON_XBOOTCLASSPATH=""
@@ -237,7 +237,7 @@ fi
 
 cd "$CARBON_HOME"
 
-TMP_DIR=/tmp/mitmp
+TMP_DIR="$CARBON_HOME"/tmp
 if [ -d "$TMP_DIR" ]; then
 rm -rf "$TMP_DIR"/*
 fi
@@ -272,7 +272,7 @@ fi
 JAVA_VER_BASED_OPTS=""
 
 if [ $java_version_formatted -ge 1100 ]; then
-    JAVA_VER_BASED_OPTS="--add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED"
+    JAVA_VER_BASED_OPTS="--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED"
 fi
 
 while [ "$status" = "$START_EXIT_STATUS" ]
@@ -285,7 +285,7 @@ do
     $JAVA_OPTS \
     -Dcom.sun.management.jmxremote \
     -classpath "$CARBON_CLASSPATH" \
-    -Djava.io.tmpdir=/tmp/mitmp \
+    -Djava.io.tmpdir="$CARBON_HOME/tmp" \
     -Dcatalina.base="$CARBON_HOME/wso2/lib/tomcat" \
     -Dwso2.server.standalone=true \
     -Dcarbon.registry.root=/ \
@@ -327,8 +327,8 @@ do
     -Dproperties.file.path=default \
     -DenableReadinessProbe=true \
     -DenableManagementApi=true \
-    -DconfigParseOnly=true \
-    -Dconfig.backup.path="/tmp/backup" \
+    -DreadOnlyFileSystemMode=true \
+    -Dlogfiles.home=/tmp \
     -Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector \
     -Dorg.ops4j.pax.logging.logReaderEnabled=false \
     -Dorg.ops4j.pax.logging.eventAdminEnabled=false \
